<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BBCT for Android.

 Copyright 2012 codeguru <codeguru@users.sourceforge.net>

 BBCT for Android is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 BBCT for Android is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <!-- IDs for views -->
    <item name="autograph" type="id"/>
    <item name="condition" type="id"/>
    <item name="brand_text" type="id"/>
    <item name="year_text" type="id"/>
    <item name="number_text" type="id"/>
    <item name="value_text" type="id"/>
    <item name="count_text" type="id"/>
    <item name="player_name_text" type="id"/>
    <item name="team_text" type="id"/>
    <item name="player_position_text" type="id"/>
    <item name="scroll_card_details" type="id"/>
    <item name="image_card_details_front" type="id"/>
    <item name="image_card_details_back" type="id"/>

</resources>